--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>StudyBoard</title>
+<meta name="theme-color" content="#6366f1" />
+<meta name="description" content="Gestor de asignaturas, notas y horarios universitarios" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+<meta name="apple-mobile-web-app-title" content="StudyBoard" />
+<title>StudyBoard - Gestor de Asignaturas</title>
+<link rel="manifest" href="manifest.json" />
+<link rel="icon" type="image/png" sizes="192x192" href="icon-192.png" />
+<link rel="apple-touch-icon" href="icon-192.png" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -2172,6 +2180,36 @@ function updateAIRecommendation() {
   aiText.textContent = recommendation;
   aiDiv.style.display = 'flex';
 }
+
+/* -------------------------
+   SERVICE WORKER (PWA)
+   ------------------------- */
+
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/studyboard/sw.js')
+      .then((registration) => {
+        console.log('✅ Service Worker registrado:', registration.scope);
+      })
+      .catch((error) => {
+        console.log('❌ Error al registrar Service Worker:', error);
+      });
+  });
+}
+
+// Detectar instalación de PWA
+let deferredPrompt;
+window.addEventListener('beforeinstallprompt', (e) => {
+  e.preventDefault();
+  deferredPrompt = e;
+  console.log('💡 App lista para instalar');
+});
+
+// Detectar cuando se instala
+window.addEventListener('appinstalled', () => {
+  console.log('✅ App instalada correctamente');
+  deferredPrompt = null;
+});
 
 </script>
 
