fix: Mejorar diseño de avisos de exámenes próximos
Cambios realizados:
- Rediseño completo del contenedor de avisos para coincidir con el estilo de recomendación IA
- Cambiado de borde completo a borde izquierdo (4px solid)
- Eliminada animación de pulso que causaba distracción
- Icono  separado como elemento independiente (estilo ai-icon)
- Corrección de overflow: tarjetas ahora se muestran completamente sin cortes
- max-height eliminado de .exam-alerts-list (era: none, ahora: sin límite)
- overflow cambiado a visible para evitar cortes
- Añadido flex-shrink: 0 a elementos de tiempo y fecha para evitar compresión
- Añadido text-overflow: ellipsis al nombre de asignatura para texto largo
- Mejor espaciado y padding consistente con otros elementos de UI
- Encabezado con layout flex para mejor alineación del icono

Mejoras visuales:
- Diseño más limpio y profesional
- Coherencia visual con otros componentes (IA recommendation)
- Mejor legibilidad con espaciado optimizado
- Sin elementos cortados independientemente del número de exámenes
- Animación de parpadeo mantenida solo para elementos urgentes

--- a/index.html
+++ b/index.html
@@ -2632,15 +2632,15 @@ function checkUpcomingExams() {
   const topExams = upcomingExams.slice(0, 3);
   
   // Construir HTML del aviso
-  let alertHTML = '<div class="exam-alerts-header">';
+  let alertHTML = '<div class="exam-alerts-header"><span class="ai-icon">⚠️</span><span>';
   
   if (topExams.length === 1) {
-    alertHTML += '⚠️ Tienes 1 examen próximo';
+    alertHTML += 'Tienes 1 examen próximo';
   } else {
-    alertHTML += `⚠️ Tienes ${topExams.length} exámenes próximos`;
+    alertHTML += `Tienes ${topExams.length} exámenes próximos`;
   }
   
-  alertHTML += '</div><div class="exam-alerts-list">';
+  alertHTML += '</span></div><div class="exam-alerts-list">';
   
   topExams.forEach(exam => {
     const examDate = new Date(exam.date + 'T00:00:00');
