fix: Evitar navegación no deseada al cerrar modal de exámenes con X
- Cambiar history.back() por history.replaceState() en closeExamsModal
- Detectar si estamos en pantalla de asignaturas o menú principal
- Restaurar el hash correcto (#subjects o #menu) sin activar navegación
- Al cerrar con X ahora permanece en la pantalla actual correctamente

--- a/index.html
+++ b/index.html
@@ -2445,9 +2445,11 @@ function closeExamsModal() {
     examsModal.style.display = 'none';
     closeAddExamForm();
   }, 300);
-  // Limpiar historial si estamos en el modal
+  // Limpiar historial si estamos en el modal (sin navegar)
   if (window.location.hash === '#exams') {
-    history.back();
+    // Usar replaceState en vez de back() para no activar navegación
+    const currentHash = subjectsScreen.classList.contains('active') ? '#subjects' : '#menu';
+    history.replaceState(null, '', currentHash);
   }
 }
 
