feat: Agregar indicador de versión en modal de sincronización
- Añadir indicador de versión v1.02 en esquina inferior derecha
- Estilo discreto y semitransparente (opacity 0.4 en light, 0.3 en dark)
- Posicionamiento absoluto para no afectar el contenido
- Fuente pequeña (11px) y no seleccionable
- Adaptado para dark mode con menor opacidad
- Versión actual: v1.02

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       </div>
       <div class="modal-body">
         <div id="sync-code-content"></div>
+        <div class="app-version">v1.02</div>
       </div>
     </div>
   </div>
