--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
   <!-- Modal para código de sincronización -->
   <div id="sync-code-modal" class="modal-overlay" style="display:none;">
     <div class="modal" style="max-width: 480px; height: auto; max-height: none;">
-      <div class="modal-header" style="background: linear-gradient(135deg, #4285f4 0%, #34a853 100%);">
+      <div class="modal-header" style="background: linear-gradient(135deg, #4285f4 0%, #34a853 100%); position: relative;">
         <h2 class="modal-title">🔄 Sincronización en la Nube</h2>
+        <div class="app-version">v1.02</div>
       </div>
       <div class="modal-body">
         <div id="sync-code-content"></div>
-        <div class="app-version">v1.02</div>
       </div>
     </div>
   </div>
